Fixed navbar stuck issue on Mobile Devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1345,3 +1345,8 @@ body {
         font-size: 16px;
     }
 }
+@media (max-width: 768px) {
+    .navbar {
+        position: relative;
+    }
+}
